--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./normalize.css">
+  <!-- <link rel="stylesheet" href="./normalize.css">
   <link rel="stylesheet" href="./fonts/fonts.css">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./styles.css"> -->
   <title>Mesto Russia</title>
 </head>
 
 <body class="page">
     <header class="header">
-        <img class="header_logo" alt="Логотип сайта" src="./images/logo.svg">
+        <img class="header_logo" alt="Логотип сайта" src="<%=require('./images/logo.svg')%>">
     </header>
  
     <section class="profile">
         <div class="profile__avatar">
-            <img class="profile__avatar_photo" alt="Фото исследователя" src="./images/photo.jpg">
+            <img class="profile__avatar_photo" alt="Фото исследователя" src="<%=require('./images/photo.jpg')%>" >
         </div>
         <div class="profile__info">
                 <h2 class="profile__name">Жак-Ив&nbspКусто</h2>
@@ -79,7 +79,7 @@
 
 <template class="card__template">
     <div class="elements__element">
-        <img class="elements__photo" alt="Фото1" src="./images/kirill-pershin-1088404-unsplash.jpg">
+        <img class="elements__photo" alt="Фото1" src="<%=require('./images/kirill-pershin-1088404-unsplash.jpg')%>">
         <div class="elements__info">
             <h3 class="elements__name">Карачаевск</h3>
             <button class="button__like"></button>
@@ -87,7 +87,7 @@
         <button class='button__remove'></button>
     </div>
 </template>
-<script type="module" src="./index.js"></script>
+<!-- <script type="module" src="./index.js"></script>
 <script type="module" src="./components/Card.js"></script>
 <script type="module" src="./components/FormValidator.js"></script>
 <script type="module" src="./components/Popup.js"></script>
@@ -95,7 +95,7 @@
 <script type="module" src="./components/PopupWithImage.js"></script>
 <script type="module" src="./components/Section.js"></script>
 <script type="module" src="./components/UserInfo.js"></script>
-<script type="module" src="./utils/constants.js"></script>
+<script type="module" src="./utils/constants.js"></script> -->
 </body>
 </html>
 
